# uc_pa

./: .gitignore  README.md  TODO  a_file.py  elementary.py  main.py  reference.py
LaTeX/beamer/: f1.tex
LaTeX/learn/: Makefile  f1.tex  f5.tex  f8.tex
c_and_cpp/: array.c  conversion.cpp  html.cpp  kaprekar_theorem.c  main.c  phone_test.cpp  sqrt_eq.c  table.c  test.c  things_about_negative_numbers.txt  utilities.h
c_and_cpp/banker_algorithm/: main.c
c_and_cpp/distance_by_min/: foo.c  foo.s  header.h  main.c  main.s
c_and_cpp/euclides/: basic.h  functions.c  main.c  options.c
c_and_cpp/gtk/: pr_1.c  pr_2.c
c_and_cpp/hangman/: main.cpp
c_and_cpp/pr_one/: Makefile  basic.h  basic.hpp  basic_functions.cpp  check_insertion.cpp  linked_list_test.cpp  main.cpp  opts_insertion.cpp  other_functions.cpp  product_functions.cpp  products.csv  shopping_functions.cpp
c_and_cpp/practice/: c.c
c_and_cpp/practice_march/: d.c
c_and_cpp/relationships_examples/: agregation.cpp  composition.cpp  dependency.cpp
c_and_cpp/situations_to_learn/: matrix.cpp
c_and_cpp/some_works/: file_1.cpp  (+5 more)
gtk_tests/: notebook_deepseek.c  notebook_deepseek_2.c  proof.c
gtk_tests/tabs/: CMakeLists.txt
gtk_tests/tabs/src/: app  main.cpp  program.h
gtk_tests/tabs/src/tab1/: tab1.cpp
gtk_tests/tabs/src/tab2/: tab2.cpp
gtk_tests/tabs/src/tab3/: tab3.cpp
java/: .classpath  pom.xml
latex/: README.md  f1.tex
py/: dec_title.py  float_rep.py  initialize_numpy.py  matrix.py
random_min/: DataFrame.csv  main.py
texts/: issues.txt  project_methodology.tex  some_things_to_do.md
(+156 files in other folders)
